fix: layout and vertical alignment of FormMultiStep and FormStep elements

--- a/src/components/FormMultiStep/FormMultiStep.scss
+++ b/src/components/FormMultiStep/FormMultiStep.scss
@@ -1,5 +1,7 @@
 .form-multi-step {
-	margin-bottom: 2rem;
+	display: flex;
+    flex-direction: column;
+    height: 100%;
 }
 
 .form-multi-step__next {
