--- a/src/components/FormStep/FormStep.scss
+++ b/src/components/FormStep/FormStep.scss
@@ -1,4 +1,6 @@
 .form-step {
-	padding: 1rem 0;
-	padding-top: 10vh;
+	padding: 2rem 0;
+    width: 100%;
+    margin-bottom: auto;
+    padding-bottom: 6rem;
 }
